frontend/tests/cases/positive/list.gr
import Vec

foo : Vec 3 Int
foo = Cons 1 (Cons 2 (Cons 3 Nil))

main : Vec 3 Int
main = map [\(x : Int) → x * 2] foo
